--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,12 +1,13 @@
 .header {
+  width: 100%;
   height: 45px;
   line-height: 45px;
   background-color: #f0f0f0;
   padding: 0 10px;
   text-align: center;
   color: #f63;
-  position: relative;
-  z-index: 300;
+  position: fixed;
+  z-index: 1000;
 }
 
 .header__back {
